--- a/AspStudio/Views/Projects/Plans.cshtml
+++ b/AspStudio/Views/Projects/Plans.cshtml
@@ -45,10 +45,10 @@
                         <tr>
                             <td>@item.cod_num_plano</td>
                             <td>@item.descripcion_plano</td>
-                            <td>@item.proyecto.cod_proyecto</td>
-                            <td>
+                            @*<td>@item.proyecto.cod_proyecto</td>*@
+                          @*  <td>
                                 <a class="btn btn-outline-warning btn-sm" href="#" role="button" onclick="ModalEditNPLAN(@item.id,'@item.cod_num_plano','@item.descripcion_plano',@item.proyecto_id);">Edit</a>
-                            </td>
+                            </td>*@
                         </tr>
                     }
                 }
